// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TokensROSA /> Renders loading screen 1`] = `
<Connect(Tokens)
  commandName="rosa"
  commandTool="rosa"
  docsLink={[Function]}
  leadingInfo={[Function]}
  show={true}
/>
`;

exports[`<TokensROSA /> Renders screen with button 1`] = `
<Connect(Tokens)
  commandName="rosa"
  commandTool="rosa"
  docsLink={[Function]}
  leadingInfo={[Function]}
  show={false}
  showPath="/token/show"
/>
`;

exports[`<TokensROSA /> Renders token 1`] = `
<Connect(Tokens)
  commandName="rosa"
  commandTool="rosa"
  docsLink={[Function]}
  leadingInfo={[Function]}
  show={true}
/>
`;
